# Compiler-IR

./: BasicBlock.cpp  CMakeLists.txt  Graph.cpp  README.md  basic_block.cpp  common.cpp  compiler.cpp  graph.cpp  instruction.cpp
include/: BasicBlock.h  Graph.h  Instruction.h  allocator.h  basic_block.h  common.h  graph.h  instruction.h  marker.h  storage.h
passes/: CMakeLists.txt  check_elimination.cpp  inlining.cpp  ir_builder.cpp  loop_analyzer.cpp  pass.cpp
passes/include/: Loop.h  check_elimination.h  inlining.h  ir_builder.h  loop.h  loop_analyzer.h  pass.h
tests/: CMakeLists.txt  basic_tests.cpp  check_elimination_tests.cpp  graph_tests.cpp  inlining_tests.cpp
